--- a/.github/workflows/backend-gcp-staging.yml
+++ b/.github/workflows/backend-gcp-staging.yml
@@ -9,14 +9,7 @@ concurrency:
   group: backend-deploy
   cancel-in-progress: true
 
-env:
-  GCP_PROJECT_ID: rd-agent-staging
-  GCP_REGION: us-central1
-  AR_REPO: rd-agent
-  BACKEND_SERVICE: rd-agent-backend-staging
-  PINECONE_INDEX: rd-agent-memory
-  PINECONE_HOST: rd-agent-memory-staging.svc.us-east-1.pinecone.io
-  ALLOW_ORIGIN_REGEX: .*
+# Removed env section to prevent variable conflicts
 
 jobs:
   deploy:
@@ -27,16 +20,21 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          project_id: ${{ env.GCP_PROJECT_ID }}
           credentials_json: ${{ secrets.GCP_SA_KEY }}
+          service_account: rd-deployer@rd-agent-dev.iam.gserviceaccount.com
+          create_credentials_file: true
+          export_environment_variables: false
 
-      - name: Setup gcloud
-        uses: google-github-actions/setup-gcloud@v2
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0
         with:
-          project_id: ${{ env.GCP_PROJECT_ID }}
+          skip_install: false
 
-      - name: Set gcloud project
-        run: gcloud config set project ${{ env.GCP_PROJECT_ID }} -q
+      - name: Set gcloud project explicitly
+        run: |
+          gcloud config set project rd-agent-dev -q
+          gcloud config set compute/region us-central1 -q
+          echo "Current project: $(gcloud config get-value project)"
 
       - name: Enable required services (idempotent)
         run: |
@@ -47,8 +45,8 @@ jobs:
         id: pinecone
         env:
           PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
-          PINECONE_INDEX: ${{ env.PINECONE_INDEX }}
-          PINECONE_HOST: ${{ env.PINECONE_HOST }}
+          PINECONE_INDEX: rd-agent-staging
+          PINECONE_HOST: ${{ secrets.PINECONE_HOST }}
         run: |
           set -euo pipefail
           IDX="${PINECONE_INDEX:-rd-agent-memory}"
@@ -81,36 +79,30 @@ jobs:
           fi
 
       - name: Enable Docker auth
-        run: gcloud auth configure-docker ${{ env.GCP_REGION }}-docker.pkg.dev -q
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev -q
 
       - name: Preflight - route traffic to latest (best-effort)
         continue-on-error: true
         run: |
-          gcloud run services update-traffic ${{ env.BACKEND_SERVICE }} \
-            --region ${{ env.GCP_REGION }} \
+          gcloud run services update-traffic rd-agent-staging \
+            --region us-central1 \
             --to-latest \
             --quiet
 
       - name: Docker login to Artifact Registry
         run: |
-          REGION=${{ env.GCP_REGION }}
-          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://$REGION-docker.pkg.dev
+          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://us-central1-docker.pkg.dev
 
       - name: Ensure Artifact Registry repository exists
         run: |
-          AR_REPO="${{ env.AR_REPO }}"; if [ -z "$AR_REPO" ]; then AR_REPO='rd-agent'; fi
-          gcloud artifacts repositories create "$AR_REPO" \
-            --repository-format=docker --location=${{ env.GCP_REGION }} \
+          gcloud artifacts repositories create rd-agent \
+            --repository-format=docker --location=us-central1 \
             --description="RD Agent images" || true
 
       - name: Build & Push image
         run: |
           set -euo pipefail
-          GCP_PROJECT_ID="${{ secrets.GCP_PROJECT_ID }}"
-          AR_REPO="${{ secrets.AR_REPO }}"; if [ -z "$AR_REPO" ]; then AR_REPO='rd-agent'; fi
-          REGION="${{ secrets.GCP_REGION }}"
-          REPO="$GCP_PROJECT_ID/$AR_REPO"
-          IMAGE="$REGION-docker.pkg.dev/$REPO/backend:$(git rev-parse --short HEAD)"
+          IMAGE="us-central1-docker.pkg.dev/rd-agent-dev/rd-agent/backend:$(git rev-parse --short HEAD)"
           docker build -t $IMAGE .
           docker push $IMAGE
         working-directory: .
@@ -118,26 +110,21 @@ jobs:
       - name: Deploy to Cloud Run (no-traffic)
         run: |
           set -euo pipefail
-          GCP_PROJECT_ID="${{ secrets.GCP_PROJECT_ID }}"
-          AR_REPO="${{ secrets.AR_REPO }}"; if [ -z "$AR_REPO" ]; then AR_REPO='rd-agent'; fi
-          REGION="${{ secrets.GCP_REGION }}"
-          REPO="$GCP_PROJECT_ID/$AR_REPO"
-          IMAGE="$REGION-docker.pkg.dev/$REPO/backend:$(git rev-parse --short HEAD)"
+          IMAGE="us-central1-docker.pkg.dev/rd-agent-dev/rd-agent/backend:$(git rev-parse --short HEAD)"
           HEAD=$(git rev-parse --short HEAD)
           # Safely handle regex with special chars like <, > by quoting
-          ALLOW_ORIGIN_REGEX_VAL="${{ env.ALLOW_ORIGIN_REGEX }}"; if [ -z "$ALLOW_ORIGIN_REGEX_VAL" ]; then ALLOW_ORIGIN_REGEX_VAL='.*'; fi
+          ALLOW_ORIGIN_REGEX_VAL=".*"; if [ -z "$ALLOW_ORIGIN_REGEX_VAL" ]; then ALLOW_ORIGIN_REGEX_VAL='.*'; fi
           # Prefer explicit PINECONE_HOST secret; then (optional) typo fallback; then step output
-          PINECONE_HOST_VAL="${{ env.PINECONE_HOST }}"
-          if [ -z "$PINECONE_HOST_VAL" ]; then PINECONE_HOST_VAL="${{ env.PINECONE_HOST }}"; fi
-          if [ -z "$PINECONE_HOST_VAL" ]; then PINECONE_HOST_VAL="${{ steps.pinecone.outputs.host }}"; fi
+          PINECONE_HOST_VAL="gcp-starter.pinecone.io"
 
           # Retry wrapper to avoid ABORTED etag/version conflicts on the service
           attempts=4
           for i in $(seq 1 $attempts); do
             set +e
-            gcloud run deploy ${{ github.env.BACKEND_SERVICE }} \
+            BACKEND_SERVICE=rd-agent-staging
+            gcloud run deploy $BACKEND_SERVICE \
               --image $IMAGE \
-              --region ${{ github.env.GCP_REGION }} \
+              --region us-central1 \
               --platform managed \
               --allow-unauthenticated \
               --cpu 1 --memory 2Gi --min-instances 1 \
@@ -145,9 +132,6 @@ jobs:
               --no-traffic \
               --port 8080 \
               --cpu-boost \
-              --startup-cpu-boost \
-              --execution-environment gen2 \
-              --min-instances 1 \
               --use-http2 \
               --container-command "uvicorn" \
               --container-arg main:app \
@@ -162,13 +146,13 @@ jobs:
               --startup-probe-period 10s \
               --startup-probe-timeout 5s \
               --startup-probe-failure-threshold 30 \
-              --set-env-vars=GEMINI_MAIN_MODEL=gemini-1.5-pro,GEMINI_SMALL_MODEL=gemini-1.5-flash \
-              --set-env-vars=TOTAL_BUDGET_S=300,HARVEST_BUDGET_S=60,TRIAGE_BUDGET_S=20,DEEPDIVE_BUDGET_S=200,SYNTH_BUDGET_S=15,ENTAILMENT_BUDGET_S=8.0,TRIAGE_TOP_K=20,DEEPDIVE_TOP_K=8 \
-              --set-env-vars=ALLOW_ORIGIN_REGEX="$ALLOW_ORIGIN_REGEX_VAL" \
-              --set-env-vars=GOOGLE_GENAI_API_KEY="${{ secrets.GOOGLE_GENAI_API_KEY }}",GOOGLE_API_KEY="${{ secrets.GOOGLE_API_KEY }}",GOOGLE_CSE_ID="${{ secrets.GOOGLE_CSE_ID }}" \
-              --set-env-vars=PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}",PINECONE_INDEX="${{ env.PINECONE_INDEX }}",PINECONE_HOST="$PINECONE_HOST_VAL",PUBMED_RETMAX=25 \
-              --set-env-vars=APP_VERSION=$HEAD,GIT_SHA=$HEAD,UNPAYWALL_EMAIL="${{ secrets.UNPAYWALL_EMAIL }}" \
-              --set-env-vars=DATABASE_URL="postgresql://${{ secrets.DB_USER }}:${{ secrets.DB_PASSWORD }}@${{ secrets.DB_HOST }}:${{ secrets.DB_PORT }}/${{ secrets.DB_NAME }}",DB_HOST="${{ secrets.DB_HOST }}",DB_PORT="${{ secrets.DB_PORT }}",DB_NAME="${{ secrets.DB_NAME }}",DB_USER="${{ secrets.DB_USER }}",DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
+              --set-env-vars="GEMINI_MAIN_MODEL=gemini-1.5-pro,GEMINI_SMALL_MODEL=gemini-1.5-flash" \
+              --set-env-vars="TOTAL_BUDGET_S=300,HARVEST_BUDGET_S=60,TRIAGE_BUDGET_S=20,DEEPDIVE_BUDGET_S=200,SYNTH_BUDGET_S=15,ENTAILMENT_BUDGET_S=8.0,TRIAGE_TOP_K=20,DEEPDIVE_TOP_K=8" \
+              --set-env-vars="ALLOW_ORIGIN_REGEX=.*" \
+              --set-env-vars="GOOGLE_GENAI_API_KEY=${{ secrets.GOOGLE_GENAI_API_KEY }},GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }},GOOGLE_CSE_ID=${{ secrets.GOOGLE_CSE_ID }}" \
+              --set-env-vars="PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }},PINECONE_INDEX=rd-agent-staging,PINECONE_HOST=gcp-starter.pinecone.io,PUBMED_RETMAX=25" \
+              --set-env-vars="APP_VERSION=$HEAD,GIT_SHA=$HEAD,UNPAYWALL_EMAIL=${{ secrets.UNPAYWALL_EMAIL }}" \
+              --set-env-vars="DATABASE_URL=${{ secrets.DATABASE_URL }}" \
             rc=$?
             set -e
             if [ $rc -eq 0 ]; then
@@ -186,10 +170,7 @@ jobs:
       - name: Route traffic if new revision is Ready
         run: |
           set -euo pipefail
-          SERVICE="${{ env.BACKEND_SERVICE }}"
-          REGION="${{ env.GCP_REGION }}"
-
-          NEW_REV=$(gcloud run services describe "$SERVICE" --region "$REGION" --format='value(status.latestCreatedRevisionName)')
+          NEW_REV=$(gcloud run services describe "rd-agent-staging" --region "us-central1" --format='value(status.latestCreatedRevisionName)')
           echo "Latest created revision: $NEW_REV"
           if [ -z "$NEW_REV" ]; then
             echo "No latest created revision found; leaving traffic unchanged"
@@ -198,10 +179,10 @@ jobs:
 
           echo "Waiting for revision to become Ready..."
           for i in $(seq 1 40); do
-            READY=$(gcloud run revisions describe "$NEW_REV" --region "$REGION" --format='json' | jq -r '.status.conditions[] | select(.type=="Ready") | .status' || true)
+            READY=$(gcloud run revisions describe "$NEW_REV" --region "us-central1" --format='json' | jq -r '.status.conditions[] | select(.type=="Ready") | .status' || true)
             if [ "$READY" = "True" ]; then
               echo "Revision is Ready. Updating traffic to $NEW_REV"
-              gcloud run services update-traffic "$SERVICE" --region "$REGION" --to-revisions="$NEW_REV=100" --quiet
+              gcloud run services update-traffic "rd-agent-staging" --region "us-central1" --to-revisions="$NEW_REV=100" --quiet
               exit 0
             fi
             echo "Not ready yet (status=$READY). Sleeping..."
@@ -211,4 +192,4 @@ jobs:
           exit 0
 
       - name: Output backend URL
-        run: gcloud run services describe ${{ env.BACKEND_SERVICE }} --region ${{ env.GCP_REGION }} --format='value(status.url)'
+        run: gcloud run services describe rd-agent-staging --region us-central1 --format='value(status.url)'
