--- a/.github/workflows/frontend-vercel.yml
+++ b/.github/workflows/frontend-vercel.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
           npx vercel --version | cat
           npx vercel pull --yes --environment=production --token "$VERCEL_TOKEN"
-          npx vercel build --token "$VERCEL_TOKEN"
+          npx vercel build --prod --token "$VERCEL_TOKEN"
           npx vercel deploy --prebuilt --prod --token "$VERCEL_TOKEN"
 
