Fix Cloud Run deployment issues
- Add Python entry point with proper PORT environment variable handling
- Add --platform linux/amd64 to all Docker builds for ARM Mac compatibility
- Ensure FastAPI binds to host 0.0.0.0 and correct port for Cloud Run
- Include __init__.py for proper Python package imports

Fixes 'container failed to start and listen on port' errors

--- a/.github/workflows/backend-gcp-stable.yml
+++ b/.github/workflows/backend-gcp-stable.yml
@@ -102,7 +102,7 @@ jobs:
           REGION="${{ secrets.GCP_REGION }}"
           REPO="$GCP_PROJECT_ID/$AR_REPO"
           IMAGE="$REGION-docker.pkg.dev/$REPO/backend-stable:$(git rev-parse --short HEAD)"
-          docker build -t $IMAGE .
+          docker build --platform linux/amd64 -t $IMAGE .
           docker push $IMAGE
         working-directory: .
 
