--- a/.github/workflows/frontend-gcp-staging.yml
+++ b/.github/workflows/frontend-gcp-staging.yml
@@ -60,7 +60,7 @@ jobs:
           REPO="$GCP_PROJECT_ID/$AR_REPO"
           IMAGE="$REGION-docker.pkg.dev/$REPO/frontend:$(git rev-parse --short HEAD)"
           gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://$REGION-docker.pkg.dev
-          docker build -t $IMAGE .
+          docker build --platform linux/amd64 -t $IMAGE .
           docker push $IMAGE
 
       - name: Deploy to Cloud Run
