--- a/.github/workflows/debug-secrets.yml
+++ b/.github/workflows/debug-secrets.yml
@@ -12,8 +12,11 @@ jobs:
           echo "DATABASE_URL length: ${#DATABASE_URL}"
           if [ -n "$DATABASE_URL" ]; then
             echo "DATABASE_URL is set (showing first 20 chars): ${DATABASE_URL:0:20}..."
+            echo "DATABASE_URL contains 'postgresql': $(echo $DATABASE_URL | grep -q 'postgresql' && echo 'YES' || echo 'NO')"
           else
             echo "DATABASE_URL is NOT set or empty"
+            echo "Available environment variables containing 'DATABASE':"
+            env | grep -i database || echo "None found"
           fi
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
