--- a/.github/workflows/backend-gcp-staging.yml
+++ b/.github/workflows/backend-gcp-staging.yml
@@ -142,6 +142,10 @@ jobs:
           attempts=3
           for i in $(seq 1 $attempts); do
             echo "Deploy attempt $i of $attempts"
+            # Force clean deployment by removing existing service first
+            gcloud run services delete rd-agent-staging --region us-central1 --quiet || true
+            
+            # Deploy fresh service with environment variables
             gcloud run deploy rd-agent-staging \
               --image us-central1-docker.pkg.dev/r-and-d-agent-mvp/rd-agent/backend:$(git rev-parse --short HEAD) \
               --region us-central1 \
