Fix Cloud Run environment variable injection using YAML file approach
- Replace command-line --set-env-vars flags with --env-vars-file approach
- Create env-vars.yaml file with all environment variables including DATABASE_URL
- This should resolve the persistent issue where DATABASE_URL was not being injected
- GitHub secret is confirmed accessible, issue was with gcloud deployment method

--- a/.github/workflows/backend-gcp-staging.yml
+++ b/.github/workflows/backend-gcp-staging.yml
@@ -142,10 +142,36 @@ jobs:
           attempts=3
           for i in $(seq 1 $attempts); do
             echo "Deploy attempt $i of $attempts"
+            # Create environment variables file for Cloud Run
+            cat > env-vars.yaml << EOF
+            DATABASE_URL: "${{ secrets.DATABASE_URL }}"
+            GOOGLE_GENAI_API_KEY: "${{ secrets.GOOGLE_GENAI_API_KEY }}"
+            GOOGLE_API_KEY: "${{ secrets.GOOGLE_API_KEY }}"
+            GOOGLE_CSE_ID: "${{ secrets.GOOGLE_CSE_ID }}"
+            PINECONE_API_KEY: "${{ secrets.PINECONE_API_KEY }}"
+            UNPAYWALL_EMAIL: "${{ secrets.UNPAYWALL_EMAIL }}"
+            GEMINI_MAIN_MODEL: "gemini-1.5-pro"
+            GEMINI_SMALL_MODEL: "gemini-1.5-flash"
+            TOTAL_BUDGET_S: "300"
+            HARVEST_BUDGET_S: "60"
+            TRIAGE_BUDGET_S: "20"
+            DEEPDIVE_BUDGET_S: "200"
+            SYNTH_BUDGET_S: "15"
+            ENTAILMENT_BUDGET_S: "8.0"
+            TRIAGE_TOP_K: "20"
+            DEEPDIVE_TOP_K: "8"
+            ALLOW_ORIGIN_REGEX: ".*"
+            PINECONE_INDEX: "rd-agent-staging"
+            PINECONE_HOST: "gcp-starter.pinecone.io"
+            PUBMED_RETMAX: "25"
+            APP_VERSION: "$(git rev-parse --short HEAD)"
+            GIT_SHA: "$(git rev-parse --short HEAD)"
+            EOF
+            
             # Force clean deployment by removing existing service first
             gcloud run services delete rd-agent-staging --region us-central1 --quiet || true
             
-            # Deploy fresh service with environment variables
+            # Deploy fresh service with environment variables from file
             gcloud run deploy rd-agent-staging \
               --image us-central1-docker.pkg.dev/r-and-d-agent-mvp/rd-agent/backend:$(git rev-parse --short HEAD) \
               --region us-central1 \
@@ -157,14 +183,7 @@ jobs:
               --timeout 900 \
               --cpu-boost \
               --use-http2 \
-              --set-env-vars="DATABASE_URL=${{ secrets.DATABASE_URL }}" \
-              --set-env-vars="GOOGLE_GENAI_API_KEY=${{ secrets.GOOGLE_GENAI_API_KEY }}" \
-              --set-env-vars="GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}" \
-              --set-env-vars="GOOGLE_CSE_ID=${{ secrets.GOOGLE_CSE_ID }}" \
-              --set-env-vars="PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}" \
-              --set-env-vars="UNPAYWALL_EMAIL=${{ secrets.UNPAYWALL_EMAIL }}" \
-              --set-env-vars="GEMINI_MAIN_MODEL=gemini-1.5-pro,GEMINI_SMALL_MODEL=gemini-1.5-flash,TOTAL_BUDGET_S=300,HARVEST_BUDGET_S=60,TRIAGE_BUDGET_S=20,DEEPDIVE_BUDGET_S=200,SYNTH_BUDGET_S=15,ENTAILMENT_BUDGET_S=8.0,TRIAGE_TOP_K=20,DEEPDIVE_TOP_K=8,ALLOW_ORIGIN_REGEX=.*,PINECONE_INDEX=rd-agent-staging,PINECONE_HOST=gcp-starter.pinecone.io,PUBMED_RETMAX=25" \
-              --set-env-vars="APP_VERSION=$(git rev-parse --short HEAD),GIT_SHA=$(git rev-parse --short HEAD)"
+              --env-vars-file env-vars.yaml
             rc=$?
             set -e
             if [ $rc -eq 0 ]; then
