--- a/.github/workflows/backend-gcp-staging.yml
+++ b/.github/workflows/backend-gcp-staging.yml
@@ -142,36 +142,10 @@ jobs:
           attempts=3
           for i in $(seq 1 $attempts); do
             echo "Deploy attempt $i of $attempts"
-            # Create environment variables file for Cloud Run
-            cat > env-vars.yaml << EOF
-            DATABASE_URL: "${{ secrets.DATABASE_URL }}"
-            GOOGLE_GENAI_API_KEY: "${{ secrets.GOOGLE_GENAI_API_KEY }}"
-            GOOGLE_API_KEY: "${{ secrets.GOOGLE_API_KEY }}"
-            GOOGLE_CSE_ID: "${{ secrets.GOOGLE_CSE_ID }}"
-            PINECONE_API_KEY: "${{ secrets.PINECONE_API_KEY }}"
-            UNPAYWALL_EMAIL: "${{ secrets.UNPAYWALL_EMAIL }}"
-            GEMINI_MAIN_MODEL: "gemini-1.5-pro"
-            GEMINI_SMALL_MODEL: "gemini-1.5-flash"
-            TOTAL_BUDGET_S: "300"
-            HARVEST_BUDGET_S: "60"
-            TRIAGE_BUDGET_S: "20"
-            DEEPDIVE_BUDGET_S: "200"
-            SYNTH_BUDGET_S: "15"
-            ENTAILMENT_BUDGET_S: "8.0"
-            TRIAGE_TOP_K: "20"
-            DEEPDIVE_TOP_K: "8"
-            ALLOW_ORIGIN_REGEX: ".*"
-            PINECONE_INDEX: "rd-agent-staging"
-            PINECONE_HOST: "gcp-starter.pinecone.io"
-            PUBMED_RETMAX: "25"
-            APP_VERSION: "$(git rev-parse --short HEAD)"
-            GIT_SHA: "$(git rev-parse --short HEAD)"
-            EOF
-            
             # Force clean deployment by removing existing service first
             gcloud run services delete rd-agent-staging --region us-central1 --quiet || true
             
-            # Deploy fresh service with environment variables from file
+            # Deploy fresh service with environment variables using update-env-vars
             gcloud run deploy rd-agent-staging \
               --image us-central1-docker.pkg.dev/r-and-d-agent-mvp/rd-agent/backend:$(git rev-parse --short HEAD) \
               --region us-central1 \
@@ -183,7 +157,28 @@ jobs:
               --timeout 900 \
               --cpu-boost \
               --use-http2 \
-              --env-vars-file env-vars.yaml
+              --update-env-vars DATABASE_URL="${{ secrets.DATABASE_URL }}" \
+              --update-env-vars GOOGLE_GENAI_API_KEY="${{ secrets.GOOGLE_GENAI_API_KEY }}" \
+              --update-env-vars GOOGLE_API_KEY="${{ secrets.GOOGLE_API_KEY }}" \
+              --update-env-vars GOOGLE_CSE_ID="${{ secrets.GOOGLE_CSE_ID }}" \
+              --update-env-vars PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}" \
+              --update-env-vars UNPAYWALL_EMAIL="${{ secrets.UNPAYWALL_EMAIL }}" \
+              --update-env-vars GEMINI_MAIN_MODEL="gemini-1.5-pro" \
+              --update-env-vars GEMINI_SMALL_MODEL="gemini-1.5-flash" \
+              --update-env-vars TOTAL_BUDGET_S="300" \
+              --update-env-vars HARVEST_BUDGET_S="60" \
+              --update-env-vars TRIAGE_BUDGET_S="20" \
+              --update-env-vars DEEPDIVE_BUDGET_S="200" \
+              --update-env-vars SYNTH_BUDGET_S="15" \
+              --update-env-vars ENTAILMENT_BUDGET_S="8.0" \
+              --update-env-vars TRIAGE_TOP_K="20" \
+              --update-env-vars DEEPDIVE_TOP_K="8" \
+              --update-env-vars ALLOW_ORIGIN_REGEX=".*" \
+              --update-env-vars PINECONE_INDEX="rd-agent-staging" \
+              --update-env-vars PINECONE_HOST="gcp-starter.pinecone.io" \
+              --update-env-vars PUBMED_RETMAX="25" \
+              --update-env-vars APP_VERSION="$(git rev-parse --short HEAD)" \
+              --update-env-vars GIT_SHA="$(git rev-parse --short HEAD)"
             rc=$?
             set -e
             if [ $rc -eq 0 ]; then
