--- a/.github/workflows/backend-gcp-staging.yml
+++ b/.github/workflows/backend-gcp-staging.yml
@@ -157,7 +157,28 @@ jobs:
               --timeout 900 \
               --cpu-boost \
               --use-http2 \
-              --set-env-vars "DATABASE_URL=${{ secrets.DATABASE_URL }},GOOGLE_GENAI_API_KEY=${{ secrets.GOOGLE_GENAI_API_KEY }},GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }},GOOGLE_CSE_ID=${{ secrets.GOOGLE_CSE_ID }},PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }},UNPAYWALL_EMAIL=${{ secrets.UNPAYWALL_EMAIL }},GEMINI_MAIN_MODEL=gemini-1.5-pro,GEMINI_SMALL_MODEL=gemini-1.5-flash,TOTAL_BUDGET_S=300,HARVEST_BUDGET_S=60,TRIAGE_BUDGET_S=20,DEEPDIVE_BUDGET_S=200,SYNTH_BUDGET_S=15,ENTAILMENT_BUDGET_S=8.0,TRIAGE_TOP_K=20,DEEPDIVE_TOP_K=8,ALLOW_ORIGIN_REGEX=.*,PINECONE_INDEX=rd-agent-staging,PINECONE_HOST=gcp-starter.pinecone.io,PUBMED_RETMAX=25,APP_VERSION=$(git rev-parse --short HEAD),GIT_SHA=$(git rev-parse --short HEAD)"
+              --set-env-vars "DATABASE_URL=${{ secrets.DATABASE_URL }}" \
+              --set-env-vars "GOOGLE_GENAI_API_KEY=${{ secrets.GOOGLE_GENAI_API_KEY }}" \
+              --set-env-vars "GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}" \
+              --set-env-vars "GOOGLE_CSE_ID=${{ secrets.GOOGLE_CSE_ID }}" \
+              --set-env-vars "PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}" \
+              --set-env-vars "UNPAYWALL_EMAIL=${{ secrets.UNPAYWALL_EMAIL }}" \
+              --set-env-vars "GEMINI_MAIN_MODEL=gemini-1.5-pro" \
+              --set-env-vars "GEMINI_SMALL_MODEL=gemini-1.5-flash" \
+              --set-env-vars "TOTAL_BUDGET_S=300" \
+              --set-env-vars "HARVEST_BUDGET_S=60" \
+              --set-env-vars "TRIAGE_BUDGET_S=20" \
+              --set-env-vars "DEEPDIVE_BUDGET_S=200" \
+              --set-env-vars "SYNTH_BUDGET_S=15" \
+              --set-env-vars "ENTAILMENT_BUDGET_S=8.0" \
+              --set-env-vars "TRIAGE_TOP_K=20" \
+              --set-env-vars "DEEPDIVE_TOP_K=8" \
+              --set-env-vars "ALLOW_ORIGIN_REGEX=.*" \
+              --set-env-vars "PINECONE_INDEX=rd-agent-staging" \
+              --set-env-vars "PINECONE_HOST=gcp-starter.pinecone.io" \
+              --set-env-vars "PUBMED_RETMAX=25" \
+              --set-env-vars "APP_VERSION=$(git rev-parse --short HEAD)" \
+              --set-env-vars "GIT_SHA=$(git rev-parse --short HEAD)"
             rc=$?
             set -e
             if [ $rc -eq 0 ]; then
