🔄 Pivot to Supabase: Update database config and deployment workflow
- Fixed database.py syntax errors from previous corruption
- Updated database configuration to prioritize SUPABASE_DATABASE_URL
- Modified GitHub Actions workflow to use SUPABASE_DATABASE_URL instead of DATABASE_URL
- Maintains fallback logic: Supabase > DATABASE_URL > POSTGRES_URL > SQLite
- Bypasses persistent Cloud Run environment variable injection issues

--- a/.github/workflows/backend-gcp-staging.yml
+++ b/.github/workflows/backend-gcp-staging.yml
@@ -157,7 +157,7 @@ jobs:
               --timeout 900 \
               --cpu-boost \
               --use-http2 \
-              --set-env-vars "DATABASE_URL=${{ secrets.DATABASE_URL }}" \
+              --set-env-vars "SUPABASE_DATABASE_URL=${{ secrets.SUPABASE_DATABASE_URL }}" \
               --set-env-vars "GOOGLE_GENAI_API_KEY=${{ secrets.GOOGLE_GENAI_API_KEY }}" \
               --set-env-vars "GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}" \
               --set-env-vars "GOOGLE_CSE_ID=${{ secrets.GOOGLE_CSE_ID }}" \
