Fix database fallback mechanism to properly use SQLite when PostgreSQL fails
- Fixed get_engine() to check actual engine URL instead of original database URL
- Ensures proper fallback to SQLite when PostgreSQL connection fails
- Prevents application from attempting PostgreSQL operations after fallback

--- a/.env.railway
+++ b/.env.railway
@@ -1,8 +1,8 @@
 # Railway Environment Variables Template
 # Copy these to Railway dashboard environment variables
 
-# Database (Supabase)
-SUPABASE_DATABASE_URL=postgresql://postgres.xxxxxxxxx:password@aws-0-us-west-1.pooler.supabase.com:6543/postgres
+# Supabase Database Connection (Primary) - Use connection pooler for better Railway compatibility
+SUPABASE_DATABASE_URL=postgresql://postgres:Ismene!1993@aws-0-us-west-1.pooler.supabase.com:6543/postgres
 
 # AI Services
 GOOGLE_GENAI_API_KEY=your_google_ai_key_here
