--- a/.github/workflows/frontend-vercel-staging.yml
+++ b/.github/workflows/frontend-vercel-staging.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build Next.js (frontend/)
         env:
-          NEXT_PUBLIC_BACKEND_URL: ${{ secrets.BACKEND_PUBLIC_URL }}
+          NEXT_PUBLIC_BACKEND_URL: https://r-dagent-production.up.railway.app
         run: |
           cd frontend
           npm run build
@@ -40,7 +40,7 @@ jobs:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_STAGING }}
-          NEXT_PUBLIC_BACKEND_URL: ${{ secrets.BACKEND_PUBLIC_URL }}
+          NEXT_PUBLIC_BACKEND_URL: https://r-dagent-production.up.railway.app
         run: |
           cd frontend
           npx vercel --version | cat
