--- a/.github/workflows/frontend-vercel-staging.yml
+++ b/.github/workflows/frontend-vercel-staging.yml
@@ -44,6 +44,6 @@ jobs:
         run: |
           cd frontend
           npx vercel --version | cat
-          npx vercel pull --yes --environment=preview --token "$VERCEL_TOKEN"
+          npx vercel pull --yes --environment=production --token "$VERCEL_TOKEN"
           npx vercel build --token "$VERCEL_TOKEN"
-          npx vercel deploy --prebuilt --token "$VERCEL_TOKEN"
+          npx vercel deploy --prebuilt --prod --token "$VERCEL_TOKEN"
