🔧 Add frontend vercel.json rewrites for dynamic routes
- Added rewrites configuration to frontend/vercel.json
- Explicit handling for /project/:projectId routes
- Should resolve 404 errors on project detail pages
- Targeting both staging and production deployments

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,4 +1,10 @@
 {
   "version": 2,
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "rewrites": [
+    {
+      "source": "/project/:projectId",
+      "destination": "/project/:projectId"
+    }
+  ]
 }
