Add explicit /project route in vercel.json to fix routing issues

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/project(.*)",
+      "dest": "frontend/project$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "frontend/$1"
     }
