ROUTING FIX: Replace problematic routes with simple rewrites to fix all 404 errors

--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,10 @@
       "use": "@vercel/next"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/project(.*)",
-      "dest": "frontend/project$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/$1"
+      "source": "/(.*)",
+      "destination": "/frontend/$1"
     }
   ]
 }
