--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "/frontend/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/frontend/$1"
     }
