--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BACKEND_URL=https://rd-backend-new-5zogd2comq-uc.a.run.app
+NEXT_PUBLIC_BACKEND_URL=https://r-dagent-production.up.railway.app
