--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_BACKEND_URL=https://rd-backend-new-5zogd2comq-uc.a.run.app
-BACKEND_URL=https://rd-backend-new-5zogd2comq-uc.a.run.app
+NEXT_PUBLIC_BACKEND_URL=https://r-dagent-production.up.railway.app
