--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,36 @@
-fastapi
+# Core FastAPI and server dependencies
+fastapi==0.115.0
 uvicorn[standard]==0.23.2
 gunicorn==21.2.0
-websockets
-python-multipart
-sqlalchemy
-psycopg2-binary
-pydantic
-python-dotenv
-langchain
-langchain-google-genai
-langchain-community
-langchain-huggingface
-sentence-transformers
-pinecone
-google-generativeai
-google-api-python-client
-requests
-numpy
-scipy
-scikit-learn
-nltk
-pdfminer.six
-alembic
-bcrypt
-jsonschema
-sendgrid
+websockets==12.0
+python-multipart==0.0.9
+
+# Database dependencies
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+alembic==1.12.1
+
+# Data validation and security
+pydantic==2.5.0
+bcrypt==4.1.2
+python-dotenv==1.0.0
+
+# Essential AI/LLM dependencies (lightweight versions)
+langchain-core==0.1.0
+langchain-google-genai==1.0.0
+google-generativeai==0.3.2
+google-api-python-client==2.108.0
+
+# HTTP and API dependencies
+requests==2.31.0
+httpx==0.25.2
+
+# Document processing (lightweight)
+pdfminer.six==20231228
+
+# Utilities
+jsonschema==4.20.0
+sendgrid==6.11.0
+
+# Basic scientific computing (no heavy ML dependencies)
+numpy==1.24.4
