--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ bcrypt==4.1.2
 python-dotenv==1.0.0
 
 # Essential AI/LLM dependencies (lightweight versions)
+langchain==0.2.16
 langchain-core==0.2.38
 langchain-google-genai==1.0.10
 google-generativeai==0.7.2
