--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,11 @@ python-dotenv==1.0.0
 # Essential AI/LLM dependencies (lightweight versions)
 langchain==0.2.16
 langchain-core==0.2.38
+langchain-community==0.2.16
 langchain-google-genai==1.0.10
 google-generativeai==0.7.2
 google-api-python-client==2.108.0
+pinecone-client==3.2.2
 
 # HTTP and API dependencies
 requests==2.31.0
