Fix Vercel deployment issues
**CRITICAL FIX**: All Vercel deployments were failing due to configuration conflicts

**Issues Fixed**:
1. **Conflicting vercel.json files**: Removed root vercel.json, kept frontend/vercel.json
2. **Next.js 15 API route typing**: Fixed route parameter typing in regenerate endpoint
   - Changed params from sync to async Promise-based access
   - Updated context parameter structure for Next.js 15 compatibility

**Changes**:
- Removed root vercel.json (was causing build conflicts)
- Updated frontend/vercel.json with proper Next.js configuration
- Fixed TypeScript error in /api/proxy/reports/[reportId]/regenerate/route.ts
- Build now passes successfully locally

**Result**: Vercel deployments should now work correctly

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,10 +1,13 @@
 {
   "version": 2,
   "framework": "nextjs",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "installCommand": "npm install",
   "rewrites": [
     {
-      "source": "/project/:projectId",
-      "destination": "/project/:projectId"
+      "source": "/api/proxy/(.*)",
+      "destination": "/api/proxy/$1"
     }
   ]
 }
