--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ langchain-community>=0.2.16
 langchain-google-genai>=1.0.10
 google-generativeai>=0.7.2
 google-api-python-client>=2.108.0
-pinecone-client>=3.2.2
+pinecone>=3.0.0
 
 # HTTP and API dependencies - Python 3.12 compatible
 requests>=2.31.0
