🚀 Phase 5 Step 1: Add Citation Network Dependencies
✅ ADDED:
- scikit-learn>=1.3.0 for similarity calculations
- aiohttp>=3.8.0 for async HTTP requests to OpenAlex API

🎯 PHASE 5: Citation Network Foundation - Step 1/5
📦 DEPLOYMENT: Ready for Railway auto-deploy

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,7 @@ sendgrid>=6.11.0
 
 # Basic scientific computing (no heavy ML dependencies) - Python 3.12 compatible
 numpy>=1.26.0
+
+# Phase 5: Citation Network Foundation dependencies - Python 3.12 compatible
+scikit-learn>=1.3.0
+aiohttp>=3.8.0
