--- a/requirements.txt
+++ b/requirements.txt
@@ -39,5 +39,6 @@ sendgrid>=6.11.0
 numpy>=1.26.0
 
 # Phase 5: Citation Network Foundation dependencies - Python 3.12 compatible
-scikit-learn>=1.3.0
-aiohttp>=3.8.0
+# Temporarily disabled for Railway deployment stability
+# scikit-learn>=1.3.0
+# aiohttp>=3.8.0
