🔄 Complete OpenAI Migration & Deep Dive Unification
✅ OPENAI MIGRATION COMPLETE:
- Backend: Updated all ChatGoogleGenerativeAI → ChatOpenAI
- Models: gemini-1.5-pro → gpt-4o, gemini-1.5-flash → gpt-4o-mini
- Environment: Updated all config files (.env.example, .env.railway, GitHub workflows)
- Dependencies: Updated requirements.txt with langchain-openai and openai packages
- Test tools: Updated smoke tests to use OpenAI

✅ DEEP DIVE UNIFICATION COMPLETE:
- NetworkViewWithSidebar: Now uses Research Hub approach with OA detection
- Project Dashboard: Updated to use Research Hub approach with OA detection
- Added detectOpenAccessUrl utility for PMC and Unpaywall detection
- All deep dive implementations now use /api/proxy/deep-dive endpoint
- Unified to pass full-text URLs for better analysis quality

✅ GENERATE REVIEW IMPLEMENTATION:
- Added missing generate review functionality to NetworkViewWithSidebar
- All three implementations now working: Research Hub, Project Dashboard, Network View
- Research Hub: Dual sync/async processing (golden standard)
- Project Dashboard: Async job processing with polling
- Network View: Uses parent callback system

🎯 IMPACT:
- PMID 29622564 deep dive will now work with rich content
- All OA papers will get full-text analysis
- Consistent behavior across all platform areas
- No more LLM 404 errors from Gemini
- Complete feature parity across all views

📋 DEPLOYMENT REQUIRED:
- Update Railway OPENAI_API_KEY environment variable
- Update GitHub OPENAI_API_KEY secret
- Remove old GOOGLE_GENAI_API_KEY and GOOGLE_API_KEY
- See DEPLOYMENT_SECRETS_UPDATE_GUIDE.md for details

--- a/.github/workflows/backend-gcp-staging.yml
+++ b/.github/workflows/backend-gcp-staging.yml
@@ -158,13 +158,12 @@ jobs:
               --cpu-boost \
               --use-http2 \
               --set-env-vars SUPABASE_DATABASE_URL="${{ secrets.SUPABASE_DATABASE_URL }}" \
-              --set-env-vars GOOGLE_GENAI_API_KEY="${{ secrets.GOOGLE_GENAI_API_KEY }}" \
-              --set-env-vars GOOGLE_API_KEY="${{ secrets.GOOGLE_API_KEY }}" \
+              --set-env-vars OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}" \
               --set-env-vars GOOGLE_CSE_ID="${{ secrets.GOOGLE_CSE_ID }}" \
               --set-env-vars PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}" \
               --set-env-vars UNPAYWALL_EMAIL="${{ secrets.UNPAYWALL_EMAIL }}" \
-              --set-env-vars GEMINI_MAIN_MODEL="gemini-1.5-pro" \
-              --set-env-vars GEMINI_SMALL_MODEL="gemini-1.5-flash" \
+              --set-env-vars OPENAI_MAIN_MODEL="gpt-4o" \
+              --set-env-vars OPENAI_SMALL_MODEL="gpt-4o-mini" \
               --set-env-vars TOTAL_BUDGET_S="300" \
               --set-env-vars HARVEST_BUDGET_S="60" \
               --set-env-vars TRIAGE_BUDGET_S="20" \
