--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 # Database
 POSTGRES_PASSWORD=your_secure_password_here
 
-# Google AI
-GOOGLE_GENAI_API_KEY=your_gemini_api_key
-GOOGLE_API_KEY=your_google_api_key
+# OpenAI
+OPENAI_API_KEY=your_openai_api_key
 
 # Pinecone
 PINECONE_API_KEY=your_pinecone_api_key
