--- a/.github/workflows/backend-gcp-stable.yml
+++ b/.github/workflows/backend-gcp-stable.yml
@@ -127,10 +127,10 @@ jobs:
             --allow-unauthenticated \
             --cpu 1 --memory 2Gi --min-instances 1 \
             --timeout 900 \
-            --set-env-vars=GEMINI_MAIN_MODEL=gemini-1.5-pro,GEMINI_SMALL_MODEL=gemini-1.5-flash \
+            --set-env-vars=OPENAI_MAIN_MODEL=gpt-4o,OPENAI_SMALL_MODEL=gpt-4o-mini \
             --set-env-vars=TOTAL_BUDGET_S=300,HARVEST_BUDGET_S=60,TRIAGE_BUDGET_S=20,DEEPDIVE_BUDGET_S=200,SYNTH_BUDGET_S=15,ENTAILMENT_BUDGET_S=8.0,TRIAGE_TOP_K=20,DEEPDIVE_TOP_K=8 \
             --set-env-vars=ALLOW_ORIGIN_REGEX="$ALLOW_ORIGIN_REGEX_VAL" \
-            --set-env-vars=GOOGLE_GENAI_API_KEY="${{ secrets.GOOGLE_GENAI_API_KEY }}",GOOGLE_API_KEY="${{ secrets.GOOGLE_API_KEY }}",GOOGLE_CSE_ID="${{ secrets.GOOGLE_CSE_ID }}" \
+            --set-env-vars=OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}",GOOGLE_CSE_ID="${{ secrets.GOOGLE_CSE_ID }}" \
             --set-env-vars=PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}",PINECONE_INDEX="${{ secrets.PINECONE_INDEX }}",PINECONE_HOST="$PINECONE_HOST_VAL",PUBMED_RETMAX=25 \
             --set-env-vars=APP_VERSION=$HEAD,GIT_SHA=$HEAD,UNPAYWALL_EMAIL="${{ secrets.UNPAYWALL_EMAIL }}" \
             --set-env-vars=DB_HOST="${{ secrets.DB_HOST_STABLE }}",DB_PORT="${{ secrets.DB_PORT_STABLE }}",DB_NAME="${{ secrets.DB_NAME_STABLE }}",DB_USER="${{ secrets.DB_USER_STABLE }}",DB_PASSWORD="${{ secrets.DB_PASSWORD_STABLE }}"
