--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,8 @@ python-dotenv>=1.0.0
 langchain>=0.2.16
 langchain-core>=0.2.38
 langchain-community>=0.2.16
-langchain-google-genai>=1.0.10
-google-generativeai>=0.7.2
-google-api-python-client>=2.108.0
+langchain-openai>=0.1.0
+openai>=1.0.0
 pinecone>=3.0.0
 
 # HTTP and API dependencies - Python 3.12 compatible
