--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,8 @@ bcrypt>=4.1.2
 python-dotenv>=1.0.0
 
 # Essential AI/LLM dependencies - Python 3.12 compatible
-langchain>=0.2.16
-langchain-core>=0.2.38
-langchain-community>=0.2.16
+# Using older langchain version for compatibility with existing imports
+langchain==0.1.20
 langchain-openai>=0.1.0
 openai>=1.0.0
 pinecone>=3.0.0
